--- a/package.json
+++ b/package.json
@@ -69,33 +69,32 @@
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0-0",
     "http-server": "^0.12.3",
+    "husky": "^4.3.0",
     "less": "^2.7.0",
     "less-loader": "^5.0.0",
+    "lint-staged": "^10.5.1",
     "prettier": "^1.19.1",
     "style-resources-loader": "^1.3.2",
     "ts-node": "^9.0.0",
     "typedoc": "^0.19.0",
     "typescript": "~3.9.3",
-    "lint-staged": "^10.5.1",
     "vue-cli-plugin-style-resources-loader": "~0.1.4",
     "vue-property-decorator": "^9.0.0"
   },
-  "gitHooks": {
-    "pre-commit": "lint-staged"
-  },
   "lint-staged": {
     "src/**/*.{jsx,txs,ts,js,json,less,vue,md}": [
-      "vue-cli-service lint"
-    ]
-  },
-  "commitlint": {
-    "extends": [
-      "@commitlint/config-conventional"
+      "vue-cli-service lint",
+      "git add"
     ]
   },
   "husky": {
     "hooks": {
-      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+      "pre-commit": "lint-staged"
+    }
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
     }
   },
   "browserslist": [
