--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -w -r 0 -s",
-    "commit": "npx cz",
+    "commit": "git-cz",
+    "release": "release-it",
     "docs": "typedoc --out ./docs/ ./src/ && npm run serve:docs",
     "serve:docs": "http-server ./docs -p 3001 -o",
     "test:unit": "vue-cli-service test:unit",
@@ -74,6 +75,7 @@
     "less-loader": "^5.0.0",
     "lint-staged": "^10.5.1",
     "prettier": "^1.19.1",
+    "release-it": "^14.2.2",
     "style-resources-loader": "^1.3.2",
     "ts-node": "^9.0.0",
     "typedoc": "^0.19.0",
@@ -94,7 +96,7 @@
   },
   "config": {
     "commitizen": {
-      "path": "cz-conventional-changelog"
+      "path": "./node_modules/cz-conventional-changelog"
     }
   },
   "browserslist": [
