--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "changelog": "conventional-changelog -p angular -i CHANGELOG.md -w -r 0 -s",
-    "commit": "git-cz",
+    "changelog": "changelog-sn -i CHANGELOG.md -s -r 2",
+    "cz": "git cz",
     "release": "release-it",
     "docs": "typedoc --out ./docs/ ./src/ && npm run serve:docs",
     "serve:docs": "http-server ./docs -p 3001 -o",
@@ -81,22 +81,26 @@
     "typedoc": "^0.19.0",
     "typescript": "~3.9.3",
     "vue-cli-plugin-style-resources-loader": "~0.1.4",
-    "vue-property-decorator": "^9.0.0"
+    "vue-property-decorator": "^9.0.0",
+    "changelog-sn": "2.0.5"
   },
   "lint-staged": {
     "src/**/*.{jsx,txs,ts,js,json,less,vue,md}": [
-      "vue-cli-service lint",
-      "git add"
+      "vue-cli-service lint"
     ]
   },
   "husky": {
     "hooks": {
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "lint-staged"
     }
   },
   "config": {
     "commitizen": {
-      "path": "./node_modules/cz-conventional-changelog"
+      "path": "./node_modules/cz-customizable"
+    },
+    "cz-customizable": {
+      "config": "./.czconfigrc.js"
     }
   },
   "browserslist": [
